kubernetes/infra/longhorn/helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
