kubernetes/infra/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Longhorn
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: longhorn
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: longhorn.saturn.ci
    external-dns.alpha.kubernetes.io/target: direct.saturn.ci
spec:
  tls:
    - secretName: longhorn.saturn.ci
      hosts:
        - longhorn.saturn.ci
  rules:
    - host: "longhorn.saturn.ci"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
